--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(simulator)
 include_directories(share)
-add_executable(inputHandler src/inputHandler/main.cpp src/inputHandler/key_input_X11.cpp share/socketcan_cpp.cpp)
-target_link_libraries(inputHandler PRIVATE X11 ncurses) # should it be PRIVATE?
-add_executable(ECM src/ECM/main.cpp src/ECM/main.cpp)
+add_executable(inputHandler src/inputHandler/main.cpp share/can_class.cpp)
+target_link_libraries(inputHandler PRIVATE ncurses) # should it be PRIVATE?
+add_executable(ECM src/ECM/main.cpp src/ECM/ECM.cpp)
+add_executable(displayHandler src/displayHandler/main.cpp share/can_class.cpp) 
