--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ include_directories(share)
 add_library(canIO share/can_class.cpp)
 add_executable(inputHandler src/inputHandler/main.cpp src/inputHandler/key_converter.cpp src/inputHandler/conversion.cpp)
 target_link_libraries(inputHandler PRIVATE ncurses pthread canIO) # should it be PRIVATE?
-add_executable(ECM src/ECM/main.cpp src/ECM/ECM.cpp src/TCM/TCM.cpp src/ECM/message_handler.cpp src/ECM/calcFuel.cpp src/ECM/driverInfo.cpp share/frames.cpp) 
+add_executable(ECM src/ECM/main.cpp src/ECM/ECM.cpp src/TCM/TCM.cpp src/ECM/message_handler.cpp src/ECM/calcFuel.cpp src/ECM/driverInfo.cpp 
+                src/ECM/calcRPM.cpp share/frames.cpp) 
 target_link_libraries(ECM PRIVATE pthread canIO)
 add_executable(displayHandler src/displayHandler/main.cpp src/displayHandler/display_class.cpp src/displayHandler/display_handler.cpp src/displayHandler/data_class.cpp share/frames.cpp) 
 target_link_libraries(displayHandler PRIVATE pthread canIO)
