addad gui to repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ target_link_libraries(ECM PRIVATE pthread canIO)
 add_executable(displayHandler src/displayHandler/main.cpp src/displayHandler/display_class.cpp src/displayHandler/display_handler.cpp src/displayHandler/data_class.cpp share/frames.cpp) 
 target_link_libraries(displayHandler PRIVATE pthread canIO)
 #set_target_properties(displayHandler PROPERTIES CXX_STANDARD 17)
+add_subdirectory(ext)
