--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(simulator)
 
-add_executable(test test_test.cpp ../share/frames.cpp)
+add_executable(test test_test.cpp ${SHARE_DIR}/frames.cpp)
 target_link_libraries(test PRIVATE gtest gtest_main pthread)
