--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(simulator)
 
-add_executable(test test_test.cpp ${SHARE_DIR}/frames.cpp)
-target_link_libraries(test PRIVATE gtest gtest_main pthread)
+add_executable(test1 test_test.cpp ${SHARE_DIR}/frames.cpp)
+target_link_libraries(test1 PRIVATE gtest gtest_main pthread)
